Change Log:

7/24/09 - 5:00 am - Derrick (v 1.0.6.2)
Fixed go commands and locations.  can now move between locations.  can use world.txt or testworld.txt

7/24/09 3:13AM - Sam (v 1.0.6.1)
Completed world parsing functionality for EXIT, CONNECTION, and LOCATION.
textworld.txt was wrong because it was malformed. Fixed that, too.

7/23/09 1:48 pm - Sam (v 1.0.6)
Change implementation for connection - AGAIN. Back to one way channel, renamed
to path. Decision was that memory saved wasn't worth the messy implmentation.

Added keyword to World Description EXIT to differentiate between CONNECTIONS and
one way path.

Refactored setupXXXX methods to allow future usage.

7/23/09 - 4:46 pm - Derrick (v 1.0.5.1)
Added some new location classes. Made a "world" in the testworld.txt. formats could be wrong (?).
Initializes to testworld.txt. Right now it does not initialize... advworld.util.utility.setupworld needs to be looked at.

7/23/09 - 1:08 pm - Derrick (v 1.0.5)
Go command functional. You can now move between rooms using room names.
Look returns potential exits.

7/23/09 - 12:58 am - Sam (v 1.0.4)
Implemented parsing world file LOCATION and CONNECTIONS
Made change to Exit class -- it is now Connections and specific direction parameters are removed for more generic extension possiblity later.
Delete Room.java---finally

7/22/09 - 9:30 pm - Steven (v 1.0.3)
Shortened regex expressions
Starting player's location is initialized to the location
	with [start] tag (changed World File Descriptor)
Using theParty as static field rather than thePlayer
Status command prints out the status of whole party

7/22/09 - 4:00 am - Steven (v 1.0.2)
Changed Utility.print to Utility.println (better description)
Added Utility.print to print without terminating newline character
Fixed some warnings
Including a standard regex array to check world.txt with Utility.setupWorld

7/21/09 - 3:40 am - Derrick (v 1.0.1)
Added cute welcome sign.
Updated StandardPlayer to ask for name.